Compile with conduit 1.1. Probably doesn't work

--- a/kontiki.cabal
+++ b/kontiki.cabal
@@ -63,6 +63,7 @@ Executable kontiki-udp
                      , network
                      , binary
                      , conduit
+                     , conduit-extra
                      , network-conduit
                      , rolling-queue
                      , lens
